--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "dependency-mcp",
-  "version": "0.0.4",
+  "version": "0.0.5",
   "description": "MCP server for checking package versions across multiple package managers",
+  "mcpName": "io.github.niradler/dependency-mcp",
   "type": "module",
   "main": "src/index.js",
   "bin": {
