--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dependency-mcp",
-  "version": "0.0.5",
+  "version": "0.0.6",
   "description": "MCP server for checking package versions across multiple package managers",
   "mcpName": "io.github.niradler/dependency-mcp",
   "type": "module",
@@ -23,7 +23,7 @@
     "maven",
     "package-manager"
   ],
-  "author": "",
+  "author": "Nir Adler",
   "license": "MIT",
   "dependencies": {
     "@modelcontextprotocol/sdk": "^0.5.0",
@@ -34,6 +34,10 @@
   },
   "files": [
     "src/",
-    "README.md"
-  ]
+    "README.md",
+    "package-lock.json"
+  ],
+  "publishConfig": {
+    "access": "public"
+  }
 }
