--- a/package.json
+++ b/package.json
@@ -1,18 +1,22 @@
 {
   "name": "dependency-mcp",
-  "version": "0.0.7",
+  "version": "0.0.8",
   "description": "MCP server for checking package versions across multiple package managers",
   "mcpName": "io.github.niradler/dependency-mcp",
   "type": "module",
-  "main": "src/index.js",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "bin": {
-    "dependency-mcp": "src/index.js"
+    "dependency-mcp": "dist/index.js"
   },
   "scripts": {
-    "start": "node src/index.js",
-    "dev": "node --inspect src/index.js",
-    "test": "node test/test.js",
-    "setup": "node setup.js"
+    "build": "tsc",
+    "prebuild": "rm -rf dist",
+    "start": "node dist/index.js",
+    "dev": "tsx --inspect src/index.ts",
+    "test": "tsx test/test.ts",
+    "prepare": "npm run build",
+    "typecheck": "tsc --noEmit"
   },
   "keywords": [
     "mcp",
@@ -21,21 +25,25 @@
     "npm",
     "pypi",
     "maven",
-    "package-manager"
+    "package-manager",
+    "typescript"
   ],
   "author": "Nir Adler",
   "license": "MIT",
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.20.2",
-    "node-fetch": "^3.3.2"
+    "axios": "^1.7.9"
+  },
+  "devDependencies": {
+    "@types/node": "^22.10.5",
+    "tsx": "^4.19.2",
+    "typescript": "^5.7.3"
   },
   "engines": {
     "node": ">=18.0.0"
   },
   "files": [
-    "src/",
-    "README.md",
-    "package-lock.json"
+    "dist/"
   ],
   "publishConfig": {
     "access": "public"
